--- a/spectral.css
+++ b/spectral.css
@@ -1,80 +1,83 @@
 /* Spectral https://fonts.google.com/specimen/Spectral */
 /* https://github.com/productiontype/spectral */
+/* WARNING: Use ttf for print, not otf, since some PDF readers
+   (including Adobe Acrobat) cannot read the OTF glyphs
+   as of 20180505. */
 
 @font-face {
 	font-family: Spectral;
-	src: url(../fonts/Spectral-ExtraLight.otf);
+	src: url(../fonts/Spectral-ExtraLight.ttf);
 	font-weight: 200;
 }
 @font-face {
 	font-family: Spectral;
-	src: url(../fonts/Spectral-ExtraLightItalic.otf);
+	src: url(../fonts/Spectral-ExtraLightItalic.ttf);
 	font-style: italic;
 	font-weight: 200;
 }
 @font-face {
 	font-family: Spectral;
-	src: url(../fonts/Spectral-Light.otf);
+	src: url(../fonts/Spectral-Light.ttf);
 	font-weight: 300;
 }
 @font-face {
 	font-family: Spectral;
-	src: url(../fonts/Spectral-LightItalic.otf);
+	src: url(../fonts/Spectral-LightItalic.ttf);
 	font-style: italic;
 	font-weight: 300;
 }
 @font-face {
 	font-family: Spectral;
-	src: url(../fonts/Spectral-Regular.otf);
+	src: url(../fonts/Spectral-Regular.ttf);
 	font-weight: 400;
 }
 @font-face {
 	font-family: Spectral;
-	src: url(../fonts/Spectral-RegularItalic.otf);
+	src: url(../fonts/Spectral-Italic.ttf);
 	font-style: italic;
 	font-weight: 400;
 }
 @font-face {
 	font-family: Spectral;
-	src: url(../fonts/Spectral-Medium.otf);
+	src: url(../fonts/Spectral-Medium.ttf);
 	font-weight: 500;
 }
 @font-face {
 	font-family: Spectral;
-	src: url(../fonts/Spectral-MediumItalic.otf);
+	src: url(../fonts/Spectral-MediumItalic.ttf);
 	font-style: italic;
 	font-weight: 500;
 }
 @font-face {
 	font-family: Spectral;
-	src: url(../fonts/Spectral-SemiBold.otf);
+	src: url(../fonts/Spectral-SemiBold.ttf);
 	font-weight: 600;
 }
 @font-face {
 	font-family: Spectral;
-	src: url(../fonts/Spectral-SemiBoldItalic.otf);
+	src: url(../fonts/Spectral-SemiBoldItalic.ttf);
 	font-style: italic;
 	font-weight: 600;
 }
 @font-face {
 	font-family: Spectral;
-	src: url(../fonts/Spectral-Bold.otf);
+	src: url(../fonts/Spectral-Bold.ttf);
 	font-weight: 700;
 }
 @font-face {
 	font-family: Spectral;
-	src: url(../fonts/Spectral-BoldItalic.otf);
+	src: url(../fonts/Spectral-BoldItalic.ttf);
 	font-style: italic;
 	font-weight: 700;
 }
 @font-face {
 	font-family: Spectral;
-	src: url(../fonts/Spectral-ExtraBold.otf);
+	src: url(../fonts/Spectral-ExtraBold.ttf);
 	font-weight: 800;
 }
 @font-face {
 	font-family: Spectral;
-	src: url(../fonts/Spectral-ExtraBoldItalic.otf);
+	src: url(../fonts/Spectral-ExtraBoldItalic.ttf);
 	font-style: italic;
 	font-weight: 800;
 }
