--- a/inconsolata.css
+++ b/inconsolata.css
@@ -7,5 +7,5 @@
 @font-face {
     font-family: "Inconsolata", monospace;
     src: url(../fonts/Inconsolata-Bold.ttf);
-    font-weight: bold.
+    font-weight: bold;
 }
